--- a/configs/arc_agi/opd-rl-qwen-8b-teacher-context.toml
+++ b/configs/arc_agi/opd-rl-qwen-8b-teacher-context.toml
@@ -1,5 +1,5 @@
-max_steps = 500
-seq_len = 32768
+max_steps = 200
+seq_len = 65536
 
 [deployment]
 num_train_gpus = 1
@@ -14,7 +14,7 @@ project = "arc-agi-opd"
 name = "arc-agi-repl-phase1-privileged-teacher"
 
 [ckpt]
-interval = 50
+interval = 10
 
 # --- Trainer ---
 [trainer.model.lora]
@@ -31,7 +31,7 @@ teacher_tau = 0.5      # Higher tau — privileged teacher provides stronger dir
 adv_tau = 1.0          # full RL reward signal (hybrid mode)
 
 [trainer.optim]
-lr = 1e-6
+lr = 5e-6              # 5x increase from 1e-6 — policy was frozen (mismatch_kl=0.0005)
 weight_decay = 0.0
 
 # --- Orchestrator ---
@@ -48,17 +48,17 @@ max_tokens = 4096
 [[orchestrator.env]]
 id = "arc-agi"
 name = "arc-agi-repl"
-args = { dataset_name = "arc-prize-2024", eval_dataset = "arc-prize-2024", eval_split = "evaluation", reward_mode = "balanced", max_turns = 20, env_type = "repl" }
+args = { dataset_name = "arc-prize-2024", eval_dataset = "arc-prize-2024", eval_split = "evaluation", max_turns = 20}
 
 [orchestrator.eval]
-interval = 100
+interval = 25           # was 100 — get 8 eval points across 200 steps instead of 2
 rollouts_per_example = 4
 num_examples = 8
 
 [[orchestrator.eval.env]]
 id = "arc-agi"
 name = "arc-agi-eval"
-args = { dataset_name = "arc-prize-2024", split = "evaluation", reward_mode = "balanced", max_turns = 20, env_type = "repl" }
+args = { dataset_name = "arc-prize-2024", split = "evaluation", max_turns = 20}
 
 [orchestrator.eval.sampling]
 temperature = 1.0
@@ -70,14 +70,14 @@ interval = 10
 
 # --- Inference (student: 8B) ---
 [inference]
-gpu_memory_utilization = 0.7
+gpu_memory_utilization = 0.90
 
 [inference.model]
 name = "willcb/Qwen3-8B"
-max_model_len = 32768
+max_model_len = 65536
 dtype = "bfloat16"
 
-# --- Teacher Inference (27B on 1 GPU) ---
+# --- Teacher Inference (32B on 1 GPU) ---
 # Phase 1: teacher sees ground-truth test outputs via privileged prompt (teacher_context in data)
 # No config flag needed — enabled automatically when info["teacher_context"] is present
 [teacher_inference]
@@ -88,5 +88,5 @@ port = 8032
 
 [teacher_inference.model]
 name = "willcb/Qwen3-32B"
-max_model_len = 32768
+max_model_len = 65536
 dtype = "bfloat16"
